build java 19 project