@@ -38,8 +38,10 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <lombok.version>1.18.16</lombok.version>
-        <easy.version>0.0.76</easy.version>
+        <maven.compiler.source>19</maven.compiler.source>
+        <maven.compiler.target>19</maven.compiler.target>
+        <lombok.version>1.18.24</lombok.version>
+        <easy.version>0.0.134.java19</easy.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -86,11 +88,12 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.10.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <release>${maven.compiler.target}</release>
+                    <compilerArgs>--enable-preview</compilerArgs>
                     <fork>true</fork>
                     <annotationProcessorPaths>
                         <path>
